RESOLVED FIXED 247919
Fix font-variant shorthand serialization
https://bugs.webkit.org/show_bug.cgi?id=247919
Summary Fix font-variant shorthand serialization
Tim Nguyen (:ntim)
Reported 2022-11-14 14:57:48 PST
- We should collapse longhands to the shorthand when possible - Clean up fontVariantValue() to not consider implicit/explicit anymore used to represent default/system values - Refactor to remove appendFontLonghandValueIfExplicit()
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-14 14:58:01 PST
Tim Nguyen (:ntim)
Comment 2 2022-11-14 15:20:10 PST
Tim Nguyen (:ntim)
Comment 3 2022-11-14 18:31:24 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/36966
EWS
Comment 4 2022-11-14 19:47:32 PST
Committed 256681@main (cee0d60d4af3): <https://commits.webkit.org/256681@main> Reviewed commits have been landed. Closing PR #6492 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.